--- a/main.html
+++ b/main.html
@@ -63,12 +63,13 @@
 </div>
 
 <div id="notif"></div>
-
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-import { getDatabase, ref, set, get, update } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
+import { getDatabase, ref, get, update } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
 
+// --------------------
 // Firebase config
+// --------------------
 const firebaseConfig = {
   apiKey: "AIzaSyDLJru0XZyogoMRc53crip0ic9oAWyMiGQ",
   authDomain: "trindolearn.firebaseapp.com",
@@ -95,26 +96,6 @@ function setCookie(name, value, days) {
 function getCookie(name) {
   const match = document.cookie.match(new RegExp('(^| )' + name + '=([^;]+)'));
   return match ? match[2] : null;
-}
-//sth
-
-  function updateProgressBar(lang, level) {
-  const path = `progress/${currentUser}/${lang}/${level}`;
-  get(ref(db, path)).then(snapshot => {
-    if (!snapshot.exists()) {
-      document.getElementById("progressBar").style.width = '0%';
-      return;
-    }
-    const data = snapshot.val();
-    let total = 0, done = 0;
-    sidebar.querySelectorAll("li").forEach(li => {
-      total++;
-      const topic = li.parentElement.previousSibling.textContent;
-      if (data[topic] && data[topic][li.textContent]) done++;
-    });
-    const percent = total === 0 ? 0 : Math.round(done / total * 100);
-    document.getElementById("progressBar").style.width = percent + '%';
-  });
 }
 
 // --------------------
@@ -205,7 +186,9 @@ function renderSidebar(topics, lang, level) {
         li.classList.add("completed");
         const path = `progress/${currentUser}/${lang}/${level}/${topic.title}`;
         await update(ref(db, path), { [sub.title]: true });
+        
         showNotif(`Completed: ${sub.title}`);
+        updateProgressBar(lang, level); // <-- update progress bar after marking
       });
 
       ul.appendChild(li);
@@ -223,11 +206,12 @@ function renderSidebar(topics, lang, level) {
     firstList.querySelector("li").click();
   }
 
-  loadProgress(lang, level);
+  // Load previous progress & update bar
+  loadProgress(lang, level).then(() => updateProgressBar(lang, level));
 }
 
 // --------------------
-// Load previous progress
+// Progress bar update
 // --------------------
 async function loadProgress(lang, level) {
   const path = `progress/${currentUser}/${lang}/${level}`;
@@ -241,6 +225,25 @@ async function loadProgress(lang, level) {
   });
 }
 
+function updateProgressBar(lang, level) {
+  const path = `progress/${currentUser}/${lang}/${level}`;
+  get(ref(db, path)).then(snapshot => {
+    if (!snapshot.exists()) {
+      document.getElementById("progressBar").style.width = '0%';
+      return;
+    }
+    const data = snapshot.val();
+    let total = 0, done = 0;
+    sidebar.querySelectorAll("li").forEach(li => {
+      total++;
+      const topic = li.parentElement.previousSibling.textContent;
+      if (data[topic] && data[topic][li.textContent]) done++;
+    });
+    const percent = total === 0 ? 0 : Math.round(done / total * 100);
+    document.getElementById("progressBar").style.width = percent + '%';
+  });
+}
+
 // --------------------
 // Event listeners
 // --------------------
@@ -251,4 +254,5 @@ document.getElementById("levelSelect").addEventListener("change", loadLessons);
 
 </body>
 </html>
+
 
